sas-core/main/default/objects/EU261_Automation_Configuration__mdt/EU261_Automation_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>EU261 Automation Configuration</label>
    <pluralLabel>EU261 Automation Configurations</pluralLabel>
</CustomObject>