sas-core/main/default/objects/EU261_Automation_Configuration__mdt/fields/Automatic_Rejection__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Rejection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether cases can be rejected automatically</description>
    <inlineHelpText>Whether cases can be rejected automatically</inlineHelpText>
    <label>Automatic Rejection</label>
    <type>Checkbox</type>
</CustomField>