sas-core/main/default/objects/EU261_Automation_Configuration__mdt/fields/Automatic_Settlement__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Settlement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether cases can be settled automatically</description>
    <inlineHelpText>Whether cases can be settled automatically</inlineHelpText>
    <label>Automatic Settlement</label>
    <type>Checkbox</type>
</CustomField>