sas-core/main/default/objects/EU261_Automation_Configuration__mdt/fields/Cancellation_Automation__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether flight cancellation claims are automated</description>
    <inlineHelpText>Whether flight cancellation claims are automated</inlineHelpText>
    <label>Cancellation automation</label>
    <type>Checkbox</type>
</CustomField>