sas-core/main/default/objects/EU261_Automation_Configuration__mdt/fields/Claim_Expense_Max_Amount__c.field-meta.xml
<CustomField>
    <fullName>Claim_Expense_Max_Amount__c</fullName>
    <description>The maximum amount in SEK of claim expenses which can be approved automatically. If set to 0, no expenses are approved automatically.</description>
    <inlineHelpText>The maximum amount in SEK of claim expenses which can be approved automatically. If set to 0, no expenses are approved automatically.</inlineHelpText>
    <label>Claim Expense Max Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>