sas-core/main/default/objects/EU261_Automation_Configuration__mdt/fields/Claims_Per_Batch__c.field-meta.xml
<CustomField>
    <fullName>Claims_Per_Batch__c</fullName>
    <description>The number of claims which should be handled per batch in automation.</description>
    <inlineHelpText>The number of claims which should be handled per batch in automation.</inlineHelpText>
    <label>Claims Per Batch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>