sas-core/main/default/objects/EU261_Automation_Configuration__mdt/fields/Delay_Automation__c.field-meta.xml
<CustomField>
    <fullName>Delay_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether flight delay claims are automated</description>
    <inlineHelpText>Whether flight delay claims are automated</inlineHelpText>
    <label>Delay automation</label>
    <type>Checkbox</type>
</CustomField>