sas-core/main/default/objects/EU261_Automation_Configuration__mdt/fields/Expense_Limit_Transportation__c.field-meta.xml
<CustomField>
    <fullName>Expense_Limit_Transportation__c</fullName>
    <description>The limit for automated reimbursement for transportation expenses in SEK.</description>
    <inlineHelpText>The limit for automated reimbursement for transportation expenses in SEK.</inlineHelpText>
    <label>Expense Limit Transportation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>