sas-core/main/default/objects/EU261_Automation_Configuration__mdt/fields/Percentage_Sent_to_Control__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Sent_to_Control__c</fullName>
    <description>The percentage of valid EU261 claims which should be sent to be controlled.</description>
    <inlineHelpText>The percentage of valid EU261 claims which should be sent to be controlled.</inlineHelpText>
    <label>Percentage sent to control</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>