sas-core/main/default/objects/EU261_Automation_Configuration__mdt/fields/Scheduled_Runtime__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Runtime__c</fullName>
    <description>The hours in the day when the scheduled automation should run</description>
    <inlineHelpText>Format should be hh:mm</inlineHelpText>
    <label>Scheduled Runtime</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>