sas-core/main/default/objects/EU261_Automation_Configuration__mdt/fields/Semi_Automation_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Semi_Automation_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether semi-automation of claim is in use</description>
    <inlineHelpText>Whether semi-automation of claim is in use</inlineHelpText>
    <label>Semi Automation Enabled</label>
    <type>Checkbox</type>
</CustomField>