sas-core/main/default/objects/EU261_Automation_Configuration__mdt/listViews/default.listView-meta.xml
<ListView>
    <fullName>default</fullName>
    <columns>DeveloperName</columns>
    <columns>Automatic_Settlement__c</columns>
    <columns>Automatic_Rejection__c</columns>
    <columns>Claim_Expense_Max_Amount__c</columns>
    <columns>Percentage_Sent_to_Control__c</columns>
    <filterScope>Everything</filterScope>
    <label>default</label>
    <language>en_US</language>
</ListView>